Tue Dec 12 16:55:39 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * MPC/config/dcps_ts_defaults.mpb:
        * MPC/config/dcps.mpb:
        * MPC/config/dcpsexe.mpb:
        * MPC/config/dcpsexe_with_udp.mpb:
        
          Moved these file from the top-level DDS directory,
          into the new path, to make them consistent with
          the location of similar files in TAO and CIAO.

Mon Dec 11 23:18:37 UTC 2006  Ciju John  <johnc@ociweb.com>

        * dds/DCPS/transport/simpleTCP/SimpleTcpDataLink.cpp:
        * dds/DCPS/transport/framework/TransportControlElement.cpp:
          The TransportControlElement is now responsible for its own life
          cycle management. TransportQueueElements cleanup needs to be
          thread-aware.

        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:
          Was missing one of the variable length parameters.

        * dds/DCPS/transport/simpleTCP/SimpleTcpConnection.cpp:
        * dds/DCPS/PublisherImpl.cpp:
          cosmetic changes

Fri Dec  8 23:21:17 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DDS_TAO.mwc:

          New file, which will pull in all ACE+TAO dependencies
          needed to build the TAO_DDS middleware and put them
          in a single build.

Fri Dec  8 22:31:28 UTC 2006  Ciju John  <johnc@ociweb.com>

        The DataWriter & DataReader Listener now have an additional
          callback API 'on_connection_deleted'. This gets invoked when the
          assiciated connection gets closed. This patch was contributed by
          Yan Dai.

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpConnection.cpp:
        * dds/DdsDcpsPublication.idl:
        * dds/DdsDcpsSubscription.idl: