@@ -140,7 +140,9 @@ int main(int argc, char *argv[])
          TAO::DCPS::SimpleUdpConfiguration* udp_config 
            = static_cast <TAO::DCPS::SimpleUdpConfiguration*> (config.in ());
 
-         udp_config->local_address_.set("localhost:12345");
+         std::string addrStr(ACE_LOCALHOST);
+         addrStr += ":12345";
+         udp_config->local_address_.set(addrStr.c_str());
          pub_tcp_impl->configure (config.in ());
        }
        
@@ -192,7 +194,11 @@ int main(int argc, char *argv[])
 
          TAO::DCPS::SimpleUdpConfiguration* udp_config 
            = static_cast <TAO::DCPS::SimpleUdpConfiguration*> (config.in ());
-         udp_config->local_address_.set("localhost:12356");
+
+         std::string addrStr(ACE_LOCALHOST);
+         addrStr += ":12356";
+
+         udp_config->local_address_.set(addrStr.c_str ());
          sub_tcp_impl->configure(config.in());
        }
 
